# whatsapp-agent-langgraph

./: .gitignore  01-volumes.yaml  03-configmaps.yaml  06-whatsapp-webhook.yaml  07-chainlit-ui.yaml  08-metallb-ip-address-pool.yaml  Data-Flow-Diagram.mmd  Dockerfile  Dockerfile.chainlit  Dockerfile.hf_models  Dockerfile.sentence_transformers_downloader  Makefile  README.md  SequenceDiagram.mmd  docker-compose.yml  image-history  pv.yaml  pvc.yaml  pyproject.toml  sbert-job.yaml  whatsapp-chatbot-agent-flow.mmd
.github/workflows/: deploy-local-k8s.yaml
mix_server/: main.py  pyproject.toml
src/ai_companion/: settings.py
src/ai_companion/core/: prompts.py
src/ai_companion/graph/: graph.py  nodes.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/whatsapp/: webhook_endpoint.py  whatsapp_response.py
src/ai_companion/modules/hf_models/: download_hf_models.py
src/ai_companion/modules/image/: image_to_text.py  image_tools_call.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/speech/: speech_to_text.py  text_to_speech.py
