[project]
name = "ai-companion"
version = "0.1.0"
description = "Your own AI buddy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.2",
    "elevenlabs>=1.50.3",
    "fastapi[standard]>=0.115.6",
    "groq>=0.13.1",
    "langchain-community>=0.3,<0.4",
    "langchain-groq>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "pydantic==2.10.0",
    "together>=1.3.10",
    "langgraph>=0.2.20,<0.3",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "langchain-openai>=0.2,<0.3",
    "pydantic-settings>=2.7.0",
    "pre-commit>=4.0.1",
    "supabase>=2.11.0",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=3.3.1",
    "pymongo>=4.10",
    "motor>=3.4.0",
    "spacy>=3.6.0,<3.8.0",
    "huggingface_hub",
    "transformers"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.uv.workspace]
members = [
    "mix_server",
]
